--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:label="apexbody_testing"
+        android:label="ApexBody"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
